--- a/package.json
+++ b/package.json
@@ -106,7 +106,8 @@
     "use-font-face-observer": "^1.2.1",
     "viem": "2.10.9",
     "wagmi": "2.9.2",
-    "xss": "^1.0.14"
+    "xss": "^1.0.14",
+    "@tawk.to/tawk-messenger-react": "^2.0.2"
   },
   "devDependencies": {
     "@playwright/experimental-ct-react": "1.41.1",
